# erp-at-home

./: CITATION.cff  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/ISSUE_TEMPLATE/: config.yml
docs/: index.md
docs/arc/: introduction.md
docs/getting_started/: contributing.md  installation.md
services/assets/: pyproject.toml
services/assets/src/assets/: manage.py
services/assets/src/assets/assets/: asgi.py  settings.py  urls.py  wsgi.py
services/contracts/: pyproject.toml
services/contracts/src/contracts/: manage.py
services/contracts/src/contracts/contracts/: asgi.py  settings.py  urls.py  wsgi.py
services/finance/: pyproject.toml
services/finance/src/finance/: manage.py
services/finance/src/finance/finance/: settings.py  urls.py
services/household/: pyproject.toml
services/household/src/household/: manage.py
services/household/src/household/household/: settings.py  urls.py
services/inventory/: pyproject.toml
services/inventory/src/inventory/: manage.py
services/inventory/src/inventory/inventory/: settings.py  urls.py
services/notify/: pyproject.toml
services/notify/src/notify/: manage.py
services/notify/src/notify/notify/: asgi.py  settings.py  urls.py  wsgi.py
services/planner/: pyproject.toml
services/planner/src/planner/: manage.py
services/planner/src/planner/planner/: settings.py  urls.py
services/vault/: pyproject.toml
services/vault/src/vault/: manage.py
services/vault/src/vault/vault/: asgi.py  settings.py  urls.py  wsgi.py
src/service/: manage.py
src/service/erp_at_home/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_example.py
